feat: add enterprise department tree
